style.css
/* stylesheet */

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');

body {
    height: 100vh;
    margin: 0;
    overflow: hidden;
    font-family: Roboto, Helvetica, sans-serif;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
}

.header {
    /* border: 1px dashed red; */
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #1f2937;
    padding: 16px 100px;
    font-size: 18px;
}

.logo {
    width: 100px;
    height: auto;
    /* border: 1px solid white; */
    border-radius: 50%;
    background-color: white;
}

.right-links > ul {
    /* border: 1px dashed orange; */
    color: #e5e7eb;
    margin: 0;
    padding: 0;
    width: 270px;
    list-style: none;
    display: flex;
    justify-content: space-between;
}

.welcome,
.action-content,
.footnote {
    display: flex;
    justify-content: center;
    align-items: center;
}

.container {
    /* border: 1px dashed orange; */
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: center;
    flex: 1;
}

.content,
.quote {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.welcome {
    background-color: #1f2937;
    flex: 1;
    padding: 0 100px;
    /* border: 1px dashed orange; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 0 100px;
}

.welcome > .left {
    /* border: 1px dashed orange; */
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
    gap: 16px;
}

.welcome > .right {
    /* border: 1px dashed red; */
}

.welcome > .left > .heading {
    font-size: 48px;
    font-weight: extra-bold;
    color: #f9faf8;
}

.welcome > .left > .text {
    font-size: 18px;
    color: #e5e7eb;
}

.welcome > .left > .buttons > * {
    background-color: #3882f6;
    color: #e5e7eb;
    border: none;
    padding: 6px 12px;
    border-radius: 8px;
}

.main-pic {
    width: 300px;
    height: auto;
    border-radius: 10px;
}
.pics {
    width: 150px;
    height: auto;
    border: 3px solid #3882f6;
    border-radius: 10%;
}

.content {
    padding: 30px 100px;
    gap: 40px;
    flex: 1;
}

.content > .title {
    font-size: 36px;
    font-weight: bold;
}

.content > .thumbnails {
    display: flex;
    justify-content: space-between;
    gap: 40px;
    font-size: 16px;
    font-weight: lighter;
    color: #1f2937;
}

.thumbnails > * {
    width: 160px;
    flex-wrap: wrap;
}

.quote {
    background-color: #e5e7eb;
    color: #1f2937;
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    flex: 1;
    justify-content: center;
    /* border: 1px dashed red; */
    padding: 0 200px;
}

.quote > .author {
    align-self: flex-end;
    color: #1f2937;
    font-size: 24px;
    font-weight: bold;
}
.action-card {
    /* border: 1px dashed orange; */
    padding: 0 100px;
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
}

.action-content {
    /* border: 1px dashed orange; */
    background-color: #3882f6;
    border-radius: 6px;
    padding: 30px 80px;
    flex: 1;
    justify-content: space-between;
    color: #e5e7eb;
    font-size: 16px;
    font-weight: lighter;
}
.action-content > .left {
    /* border: 1px dashed orange; */
    display: flex;
    flex-direction: column;
    gap: 6px;
}
.action-content > .left > .action-text {
    font-size: 18px;
    font-weight: bold;
}

.action-content > .right > button {
    background-color: #3882f6;
    border: 1px solid #e5e7eb;
    border-radius: 8px;
    padding: 8px 24px;
    color: #e5e7eb;
    font-weight: bold;
}

.footnote {
    padding: 30px;
    background-color: #1f2937;
    color: #e5e7eb;
}

